--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,12 @@
     "homepage": "https://github.com/Flubit/merchant-api-client",
     "license": "MIT",
     "require": {
-        "php": ">=5.3.3",
-        "guzzle/guzzle": "~3.7"
+        "php": ">=5.4",
+        "guzzlehttp/guzzle": "~5.3"
+    },
+    "require-dev": {
+        "phpspec/phpspec": "2.2.*@dev",
+        "fabpot/php-cs-fixer": "2.0.*@dev"
     },
     "autoload": {
         "psr-0": {
