--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
 
 script:
   - vendor/bin/phpspec  run
-  - vendor/bin/php-cs-fixer fix --dry-run --verbose -diff
+  - vendor/bin/php-cs-fixer fix --dry-run --verbose --diff
